cmake_minimum_required(VERSION 3.21)
project(POSIX C)

set(CMAKE_C_STANDARD 99)

add_executable(POSIX Lab11.c Lab12.c Lab13.c Lab14.c Lab15.c Lab16.c)

add_executable(Lab12 Lab12.c)
add_executable(Lab11 Lab11.c)
add_executable(Lab13 Lab13.c)
add_executable(Lab14 Lab14.c)
add_executable(Lab15 Lab15.c)
add_executable(Lab16 Lab16.c)